# traffic-accident-analysis

./: 2. Statistical Analysis.ipynb  3. CEMADEN.ipynb  4. ML Analysis.ipynb  5. Conclusion.ipynb  README.md  analise_correspondencia_pcd_II.R  cemaden.ipynb  get_climate_data.py  open-meteo-response.json  pyproject.toml  statistical_analysis.ipynb  statistical_tests.ipynb  traffic-analysis.ipynb
data_open_meteo/: example-response.json  get_climate_data.py
mapas/: Dezembro.kml  Fevereiro.kml  Janeiro.kml  cemaden_25_12_2022.kml
processed_data/: inmet_data.csv  prf_inmet_rain_data.csv  prf_not_rain_data.csv  prf_not_rain_data_correspondencia.csv  prf_rain_data.csv
raw_data/: fluxo_rodovias.csv  inmet_stations.csv  inmet_temperature.csv
scripts/: process_accident_time.py  process_climate_data.py  process_inmet_data.py
