[tool.poetry]
name = "traffic-accident-analysis"
version = "0.1.0"
description = ""
authors = ["Lucas Ciziks"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"
requests = "^2.31.0"
seaborn = "^0.12.2"
scipy = "^1.11.2"
plotly = "^5.16.1"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
